workloads/assisted-teacher/backend/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: assisted-teacher-backend
  namespace: assisted-teacher
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`desk.bapttf.com`) && (PathPrefix(`/api`) || PathPrefix(`/ws`))
      kind: Rule
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
      services:
        - name: assisted-teacher-backend
          port: 9847
  tls: {}
